[package]
edition = "2024"
name = "ws2812-driver"
rust-version = "1.88"
version = "0.1.0"


[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c3", "log-04", "unstable"] }

# esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c3", "log-04"] }

log = "0.4.27"


heapless = "0.9.2"
thiserror = { version = "2.0.18", default-features = false }

smart-leds = "0.4"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
