[package]
name = "rp2040"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"


embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "log",
] }

embassy-rp = { version = "0.10.0",  features = ["log", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
